--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -7,10 +7,10 @@
     <meta charset="utf-8" />
     <title>Pages - Admin Dashboard UI Kit - Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
-    <link rel="apple-touch-icon" href="pages/ico/60.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="pages/ico/76.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="pages/ico/120.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="pages/ico/152.png">
+    <link rel="apple-touch-icon" href="{% static 'pages/ico/60.png' %}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'pages/ico/76.png' %}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{% static 'pages/ico/120.png' %}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'pages/ico/152.png' %}">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
@@ -18,18 +18,18 @@
     <meta content="" name="description" />
     <meta content="" name="author" />
     <link href="{% static 'assets/plugins/pace/pace-theme-flash.css' %}" rel="stylesheet" type="text/css" />
-    <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
-    <link href="assets/plugins/jquery-scrollbar/jquery.scrollbar.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/plugins/switchery/css/switchery.min.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/plugins/nvd3/nv.d3.min.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="assets/plugins/rickshaw/rickshaw.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/plugins/bootstrap-datepicker/css/datepicker3.css" rel="stylesheet" type="text/css" media="screen">
-    <link href="assets/plugins/mapplic/css/mapplic.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/dashboard.widgets.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="pages/css/pages-icons.css" rel="stylesheet" type="text/css">
-    <link class="main-stylesheet" href="pages/css/themes/light.css" rel="stylesheet" type="text/css" />
+    <link href="{% static 'assets/plugins/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'assets/plugins/font-awesome/css/font-awesome.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'assets/plugins/jquery-scrollbar/jquery.scrollbar.css' %}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{% static 'assets/plugins/select2/css/select2.min.css' %}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{% static 'assets/plugins/switchery/css/switchery.min.css' %}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{% static 'assets/plugins/nvd3/nv.d3.min.css' %}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{% static 'assets/plugins/rickshaw/rickshaw.min.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'assets/plugins/bootstrap-datepicker/css/datepicker3.css' %}" rel="stylesheet" type="text/css" media="screen">
+    <link href="{% static 'assets/plugins/mapplic/css/mapplic.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'assets/css/dashboard.widgets.css' %}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{% static 'pages/css/pages-icons.css' %}" rel="stylesheet" type="text/css">
+    <link class="main-stylesheet" href="{% static 'pages/css/themes/light.css' %}" rel="stylesheet" type="text/css" />
   </head>
   <body class="fixed-header dashboard menu-pin">
     <!-- BEGIN SIDEBPANEL-->
@@ -38,7 +38,7 @@
       <!-- END SIDEBAR MENU TOP TRAY CONTENT-->
       <!-- BEGIN SIDEBAR MENU HEADER-->
       <div class="sidebar-header">
-        <img src="assets/img/logo.png" alt="logo" class="brand" data-src="assets/img/logo.png" data-src-retina="assets/img/logo_2x.png" width="78" height="22">
+        <img src="{% static 'assets/img/logo.png' %}" alt="logo" class="brand" data-src="{% static 'assets/img/logo.png' %}" data-src-retina="{% static 'assets/img/logo_2x.png' %}" width="78" height="22">
       </div>
       <!-- END SIDEBAR MENU HEADER-->
       <!-- START SIDEBAR MENU -->
@@ -2087,7 +2087,7 @@
                 <!-- BEGIN From Them Message  !-->
                 <div class="message clearfix">
                   <div class="profile-img-wrapper m-t-5 inline">
-                    <img class="col-top" width="30" height="30" src="assets/img/profiles/avatar_small.jpg" alt="" data-src="assets/img/profiles/avatar_small.jpg" data-src-retina="assets/img/profiles/avatar_small2x.jpg">
+                    <img class="col-top" width="30" height="30" src="{% static 'assets/img/profiles/avatar_small.jpg' %}" alt="" data-src="{% static 'assets/img/profiles/avatar_small.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar_small2x.jpg' %}">
                   </div>
                   <div class="chat-bubble from-them">
                     Yea
@@ -2125,7 +2125,7 @@
         <!-- BEGIN Overlay Header !-->
         <div class="container-fluid">
           <!-- BEGIN Overlay Logo !-->
-          <img class="overlay-brand" src="assets/img/logo.png" alt="logo" data-src="assets/img/logo.png" data-src-retina="assets/img/logo_2x.png" width="78" height="22">
+          <img class="overlay-brand" src="{% static 'assets/img/logo.png' %}" alt="logo" data-src="{% static 'assets/img/logo.png' %}" data-src-retina="{% static 'assets/img/logo_2x.png' %}" width="78" height="22">
           <!-- END Overlay Logo !-->
           <!-- BEGIN Overlay Close !-->
           <a href="#" class="close-icon-light overlay-close text-black fs-16">
@@ -2165,7 +2165,7 @@
                   <!-- BEGIN Search Result Item Thumbnail !-->
                   <div class="thumbnail-wrapper d48 circular bg-success text-white inline m-t-10">
                     <div>
-                      <img width="50" height="50" src="assets/img/profiles/avatar.jpg" data-src="assets/img/profiles/avatar.jpg" data-src-retina="assets/img/profiles/avatar2x.jpg" alt="">
+                      <img width="50" height="50" src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src="{% static 'assets/img/profiles/avatar.jpg' %}" data-src-retina="{% static 'assets/img/profiles/avatar2x.jpg' %}" alt="">
                     </div>
                   </div>
                   <!-- END Search Result Item Thumbnail !-->
@@ -2256,41 +2256,41 @@
     </div>
     <!-- END OVERLAY -->
     <!-- BEGIN VENDOR JS -->
-    <script src="assets/plugins/feather-icons/feather.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/modernizr.custom.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/tether/js/tether.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery/jquery-easy.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-unveil/jquery.unveil.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-ios-list/jquery.ioslist.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-actual/jquery.actual.min.js"></script>
-    <script src="assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/select2/js/select2.full.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/classie/classie.js"></script>
-    <script src="assets/plugins/switchery/js/switchery.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/nvd3/lib/d3.v3.js" type="text/javascript"></script>
-    <script src="assets/plugins/nvd3/nv.d3.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/nvd3/src/utils.js" type="text/javascript"></script>
-    <script src="assets/plugins/nvd3/src/tooltip.js" type="text/javascript"></script>
-    <script src="assets/plugins/nvd3/src/interactiveLayer.js" type="text/javascript"></script>
-    <script src="assets/plugins/nvd3/src/models/axis.js" type="text/javascript"></script>
-    <script src="assets/plugins/nvd3/src/models/line.js" type="text/javascript"></script>
-    <script src="assets/plugins/nvd3/src/models/lineWithFocusChart.js" type="text/javascript"></script>
-    <script src="assets/plugins/rickshaw/rickshaw.min.js"></script>
-    <script src="assets/plugins/mapplic/js/hammer.js"></script>
-    <script src="assets/plugins/mapplic/js/jquery.mousewheel.js"></script>
-    <script src="assets/plugins/mapplic/js/mapplic.js"></script>
-    <script src="assets/js/dashboard.js" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/feather-icons/feather.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/pace/pace.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/jquery/jquery-1.11.1.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/modernizr.custom.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/jquery-ui/jquery-ui.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/tether/js/tether.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/jquery/jquery-easy.js' %}assets/plugins/jquery/jquery-easy.js" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/jquery-unveil/jquery.unveil.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/jquery-ios-list/jquery.ioslist.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/jquery-actual/jquery.actual.min.js' %}"></script>
+    <script src="{% static 'assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'assets/plugins/select2/js/select2.full.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'assets/plugins/classie/classie.js' %}"></script>
+    <script src="{% static 'assets/plugins/switchery/js/switchery.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/nvd3/lib/d3.v3.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/nvd3/nv.d3.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/nvd3/src/utils.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/nvd3/src/tooltip.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/nvd3/src/interactiveLayer.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/nvd3/src/models/axis.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/nvd3/src/models/line.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/nvd3/src/models/lineWithFocusChart.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/plugins/rickshaw/rickshaw.min.js' %}"></script>
+    <script src="{% static 'assets/plugins/mapplic/js/hammer.js' %}"></script>
+    <script src="{% static 'assets/plugins/mapplic/js/jquery.mousewheel.js' %}"></script>
+    <script src="{% static 'assets/plugins/mapplic/js/mapplic.js' %}"></script>
+    <script src="{% static 'assets/js/dashboard.js' %}" type="text/javascript"></script>
     <!-- END VENDOR JS -->
     <!-- BEGIN CORE TEMPLATE JS -->
-    <script src="pages/js/pages.min.js"></script>
+    <script src="{% static 'pages/js/pages.min.js' %}"></script>
     <!-- END CORE TEMPLATE JS -->
     <!-- BEGIN PAGE LEVEL JS -->
-    <script src="assets/js/dashboard.js" type="text/javascript"></script>
-    <script src="assets/js/scripts.js" type="text/javascript"></script>
+    <script src="{% static 'assets/js/dashboard.js' %}" type="text/javascript"></script>
+    <script src="{% static 'assets/js/scripts.js' %}" type="text/javascript"></script>
     <!-- END PAGE LEVEL JS -->
   </body>
 </html>
