--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
@@ -30,6 +29,12 @@
     <link href="{% static 'assets/css/dashboard.widgets.css' %}" rel="stylesheet" type="text/css" media="screen" />
     <link href="{% static 'pages/css/pages-icons.css' %}" rel="stylesheet" type="text/css">
     <link class="main-stylesheet" href="{% static 'pages/css/themes/light.css' %}" rel="stylesheet" type="text/css" />
+
+    <link href="{% static 'assets/plugins/jquery-metrojs/MetroJs.css' %}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{% static 'assets/plugins/codrops-dialogFx/dialog.css' %}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{% static 'assets/plugins/codrops-dialogFx/dialog-sandra.css' %}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{% static 'assets/plugins/owl-carousel/assets/owl.carousel.css' %}" rel="stylesheet" type="text/css" media="screen" />
+    <link href="{% static 'assets/plugins/jquery-nouislider/jquery.nouislider.css' %}" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body class="fixed-header dashboard menu-pin">
     <!-- BEGIN SIDEBPANEL-->
@@ -482,17 +487,15 @@
       <!-- END HEADER -->
       <!-- START PAGE CONTENT WRAPPER -->
       <div class="page-content-wrapper ">
-        <!-- START PAGE CONTENT -->
-        <div class="content sm-gutter">
+
+          <!-- !!!!!! START BLOCK CONTENT !!!!!! -->
 
           {% block content %}
           {% endblock %}
 
+          <!-- !!!!!! END BLOCK CONTENT !!!!!! -->
 
-        </div>
-        <!-- END PAGE CONTENT -->
         <!-- START COPYRIGHT -->
-        <!-- START CONTAINER FLUID -->
         <!-- START CONTAINER FLUID -->
         <div class=" container-fluid  container-fixed-lg footer">
           <div class="copyright sm-text-center">
@@ -1051,42 +1054,58 @@
       <!-- END Overlay Content !-->
     </div>
     <!-- END OVERLAY -->
-    <!-- BEGIN VENDOR JS -->
-    <script src="{% static 'assets/plugins/feather-icons/feather.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/pace/pace.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/jquery/jquery-1.11.1.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/modernizr.custom.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/jquery-ui/jquery-ui.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/tether/js/tether.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/jquery/jquery-easy.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/jquery-unveil/jquery.unveil.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/jquery-ios-list/jquery.ioslist.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/jquery-actual/jquery.actual.min.js' %}"></script>
-    <script src="{% static 'assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'assets/plugins/select2/js/select2.full.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'assets/plugins/classie/classie.js' %}"></script>
-    <script src="{% static 'assets/plugins/switchery/js/switchery.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/nvd3/lib/d3.v3.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/nvd3/nv.d3.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/nvd3/src/utils.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/nvd3/src/tooltip.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/nvd3/src/interactiveLayer.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/nvd3/src/models/axis.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/nvd3/src/models/line.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/nvd3/src/models/lineWithFocusChart.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/rickshaw/rickshaw.min.js' %}"></script>
-    <script src="{% static 'assets/plugins/mapplic/js/hammer.js' %}"></script>
-    <script src="{% static 'assets/plugins/mapplic/js/jquery.mousewheel.js' %}"></script>
-    <script src="{% static 'assets/plugins/mapplic/js/mapplic.js' %}"></script>
-    <script src="{% static 'assets/js/dashboard.js' %}" type="text/javascript"></script>
-    <!-- END VENDOR JS -->
-    <!-- BEGIN CORE TEMPLATE JS -->
-    <script src="{% static 'pages/js/pages.min.js' %}"></script>
-    <!-- END CORE TEMPLATE JS -->
-    <!-- BEGIN PAGE LEVEL JS -->
-    <script src="{% static 'assets/js/dashboard.js' %}" type="text/javascript"></script>
-    <script src="{% static 'assets/js/scripts.js' %}" type="text/javascript"></script>
-    <!-- END PAGE LEVEL JS -->
+
   </body>
+
+  <!-- BEGIN VENDOR JS -->
+  <script src="{% static 'assets/plugins/feather-icons/feather.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/pace/pace.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/jquery/jquery-1.11.1.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/modernizr.custom.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/jquery-ui/jquery-ui.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/tether/js/tether.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/jquery/jquery-easy.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/jquery-unveil/jquery.unveil.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/jquery-ios-list/jquery.ioslist.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/jquery-actual/jquery.actual.min.js' %}"></script>
+  <script src="{% static 'assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'assets/plugins/select2/js/select2.full.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'assets/plugins/classie/classie.js' %}"></script>
+  <script src="{% static 'assets/plugins/switchery/js/switchery.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/nvd3/lib/d3.v3.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/nvd3/nv.d3.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/nvd3/src/utils.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/nvd3/src/tooltip.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/nvd3/src/interactiveLayer.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/nvd3/src/models/axis.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/nvd3/src/models/line.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/nvd3/src/models/lineWithFocusChart.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/rickshaw/rickshaw.min.js' %}"></script>
+  <script src="{% static 'assets/plugins/mapplic/js/hammer.js' %}"></script>
+  <script src="{% static 'assets/plugins/mapplic/js/jquery.mousewheel.js' %}"></script>
+  <script src="{% static 'assets/plugins/mapplic/js/mapplic.js' %}"></script>
+  <script src="{% static 'assets/js/dashboard.js' %}" type="text/javascript"></script>
+  <!-- END VENDOR JS -->
+  <!-- BEGIN CORE TEMPLATE JS -->
+  <script src="{% static 'pages/js/pages.min.js' %}"></script>
+  <!-- END CORE TEMPLATE JS -->
+  <!-- BEGIN PAGE LEVEL JS -->
+  <script src="{% static 'assets/js/dashboard.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/js/scripts.js' %}" type="text/javascript"></script>
+  <!-- END PAGE LEVEL JS -->
+
+
+  <!-- START GALLERY JS -->
+  <script src="{% static 'assets/plugins/jquery-metrojs/MetroJs.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/imagesloaded/imagesloaded.pkgd.min.js' %}"></script>
+  <script src="{% static 'assets/plugins/jquery-isotope/isotope.pkgd.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/codrops-dialogFx/dialogFx.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/owl-carousel/owl.carousel.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/jquery-nouislider/jquery.nouislider.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/jquery-nouislider/jquery.liblink.js' %}" type="text/javascript"></script>
+
+  <script src="{% static 'assets/js/gallery.js' %}" type="text/javascript"></script>
+  <!-- END GALLERY JS -->
+
 </html>
