--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -51,9 +51,16 @@
         <!-- BEGIN SIDEBAR MENU ITEMS-->
         <ul class="menu-items">
           <li class="m-t-30 ">
-            <a href="index.html" class="detailed">
-              <span class="title">Dashboard</span>
-              <span class="details">12 New Updates</span>
+            <a href="/" class="detailed">
+              <span class="title">HOME</span>
+              <span class="details">index.html</span>
+            </a>
+            <span class="icon-thumbnail"><i data-feather="shield"></i></span>
+          </li>
+          <li class="m-t-30 ">
+            <a href="/api/v1/ad/" class="detailed">
+              <span class="title">광고</span>
+              <span class="details">ad_list.html</span>
             </a>
             <span class="icon-thumbnail"><i data-feather="shield"></i></span>
           </li>
@@ -1091,7 +1098,6 @@
   <script src="{% static 'pages/js/pages.min.js' %}"></script>
   <!-- END CORE TEMPLATE JS -->
   <!-- BEGIN PAGE LEVEL JS -->
-  <script src="{% static 'assets/js/dashboard.js' %}" type="text/javascript"></script>
   <script src="{% static 'assets/js/scripts.js' %}" type="text/javascript"></script>
   <!-- END PAGE LEVEL JS -->
 
