[html 수정] login 수정 및 base 각 페이지 링크 메뉴 추가

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -64,6 +64,27 @@
             </a>
             <span class="icon-thumbnail"><i data-feather="shield"></i></span>
           </li>
+          <li class="m-t-30 ">
+            <a href="/api/v1/auth/join/" class="detailed">
+              <span class="title">회원가입</span>
+              <span class="details">join.html</span>
+            </a>
+            <span class="icon-thumbnail"><i data-feather="shield"></i></span>
+          </li>
+          <li class="m-t-30 ">
+            <a href="/api/v1/auth/login/" class="detailed">
+              <span class="title">로그인</span>
+              <span class="details">login.html</span>
+            </a>
+            <span class="icon-thumbnail"><i data-feather="shield"></i></span>
+          </li>
+          <li class="m-t-30 ">
+            <a href="index.html" class="detailed">
+              <span class="title">Dashboard</span>
+              <span class="details">12 New Updates</span>
+            </a>
+            <span class="icon-thumbnail"><i data-feather="shield"></i></span>
+          </li>
           <li class="">
             <a href="email.html" class="detailed">
               <span class="title">Email</span>
