--- a/api/templates/join.html
+++ b/api/templates/join.html
@@ -18,8 +18,7 @@
   <body class="fixed-header menu-pin">
     <div class="register-container full-height sm-p-t-30">
       <div class="d-flex justify-content-center flex-column full-height ">
-        <img src="{% static 'assets/img/logo.png' %}" alt="logo" data-src="{% static 'assets/img/logo.png' %}" data-src-retina="{% static 'assets/img/logo_2x.png' %}" width="78" height="22">
-        <h3>Pages makes it easy to enjoy what matters the most in your life</h3>
+        <h3>Join</h3>
         <p>
           Create a pages account. If you have a facebook account, log into it for this process. Sign in with <a href="#" class="text-info">Facebook</a> or <a href="#" class="text-info">Google</a>
         </p>
