--- a/api/templates/ad_list.html
+++ b/api/templates/ad_list.html
@@ -10,14 +10,14 @@
 <div class="content ">
   <div class=" container-fluid   container-fixed-lg sm-p-l-0 sm-p-r-0">
 
-      <!-- START JUMBOTRON -->
+    <!-- START JUMBOTRON -->
     <div data-pages="parallax">
       <div class="container-fluid p-l-25 p-r-25 sm-p-l-0 sm-p-r-0">
         <div class="inner">
           <!-- START BREADCRUMB -->
           <ol class="breadcrumb sm-p-b-5">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active">join</li>
+            <li class="breadcrumb-item active">Ad list</li>
           </ol>
         </div>
       </div>
