--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -35,6 +35,8 @@
     <link href="{% static 'assets/plugins/codrops-dialogFx/dialog-sandra.css' %}" rel="stylesheet" type="text/css" media="screen" />
     <link href="{% static 'assets/plugins/owl-carousel/assets/owl.carousel.css' %}" rel="stylesheet" type="text/css" media="screen" />
     <link href="{% static 'assets/plugins/jquery-nouislider/jquery.nouislider.css' %}" rel="stylesheet" type="text/css" media="screen" />
+
+    <link href="{% static 'assets/plugins/codrops-stepsform/css/component.css' %}" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body class="fixed-header dashboard menu-pin">
     <!-- BEGIN SIDEBPANEL-->
@@ -75,6 +77,13 @@
             <a href="/api/v1/auth/login/" class="detailed">
               <span class="title">로그인</span>
               <span class="details">login.html</span>
+            </a>
+            <span class="icon-thumbnail"><i data-feather="shield"></i></span>
+          </li>
+          <li class="m-t-30 ">
+            <a href="/api/v1/ad/3/" class="detailed">
+              <span class="title">광고 상세보기</span>
+              <span class="details">ad_detail.html</span>
             </a>
             <span class="icon-thumbnail"><i data-feather="shield"></i></span>
           </li>
@@ -1123,7 +1132,7 @@
   <!-- END PAGE LEVEL JS -->
 
 
-  <!-- START GALLERY JS -->
+  <!-- START OTHER JS -->
   <script src="{% static 'assets/plugins/jquery-metrojs/MetroJs.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'assets/plugins/imagesloaded/imagesloaded.pkgd.min.js' %}"></script>
   <script src="{% static 'assets/plugins/jquery-isotope/isotope.pkgd.min.js' %}" type="text/javascript"></script>
@@ -1131,8 +1140,10 @@
   <script src="{% static 'assets/plugins/owl-carousel/owl.carousel.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'assets/plugins/jquery-nouislider/jquery.nouislider.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'assets/plugins/jquery-nouislider/jquery.liblink.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/plugins/codrops-stepsform/js/stepsForm.js' %}" type="text/javascript"></script>
 
   <script src="{% static 'assets/js/gallery.js' %}" type="text/javascript"></script>
-  <!-- END GALLERY JS -->
+  <script src="{% static 'pages/js/pages.social.min.js' %}"></script>
+  <!-- END OTHER JS -->
 
 </html>
