--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -367,8 +367,6 @@
           <div class="brand inline">
             <img src="{% static 'assets/img/logo.png' %}" alt="logo" data-src="{% static 'assets/img/logo.png' %}" data-src-retina="{% static 'assets/img/logo_2x.png' %}" width="78" height="22">
           </div>
-          <a href="#" class="btn btn-link text-primary m-l-20 hidden-md-down">Add New Item</a>
-          <a href="#" class="search-link hidden-md-down" data-toggle="search"><i class="pg-search"></i>Type anywhere to <span class="bold">search</span></a>
         </div>
         <div class="d-flex align-items-center">
           {% if user.is_active %}            
@@ -490,12 +488,6 @@
                 <!-- END Notification Dropdown -->
               </div>
             </li>
-            <li class="p-r-10 inline">
-              <a href="#" class="header-icon pg pg-link"></a>
-            </li>
-            <li class="p-r-10 inline">
-              <a href="#" class="header-icon pg pg-thumbs"></a>
-            </li>
           </ul>
           
           <!-- 오른쪽 메뉴 끝 .. -->
@@ -511,14 +503,8 @@
             </button>
             <div class="dropdown-menu dropdown-menu-right profile-dropdown" role="menu">
               <a href="#" class="dropdown-item"><i class="pg-settings_small"></i> Settings</a>
-              <a href="#" class="dropdown-item"><i class="pg-outdent"></i> Feedback</a>
               <a href="#" class="dropdown-item"><i class="pg-signals"></i> Help</a>
-              <a href="#" class="clearfix bg-master-lighter dropdown-item">
-                <span class="pull-left">  
-                    <a href="{% url 'logout' %}?next={% url 'index' %}">Logout</a>
-                </span>
-                <span class="pull-right"><i class="pg-power"></i></span>
-              </a>
+              <a href="{% url 'logout' %}" class="dropdown-item"><i class="pg-power"></i> Logout</a>
             </div>
           </div>
           
