--- a/api/templates/join.html
+++ b/api/templates/join.html
@@ -18,10 +18,10 @@
   <body class="fixed-header menu-pin">
     <div class="register-container full-height sm-p-t-30">
       <div class="d-flex justify-content-center flex-column full-height ">
-        <h3>Join</h3>
-        <p>
+        <h3>회원가입</h3>
+        <!-- <p>
           Create a pages account. If you have a facebook account, log into it for this process. Sign in with <a href="#" class="text-info">Facebook</a> or <a href="#" class="text-info">Google</a>
-        </p>
+        </p> -->
         <form id="form-register" class="p-t-15" role="form" action="index.html">
           <div class="row">
             <div class="col-md-6">
@@ -61,15 +61,7 @@
               </div>
             </div>
           </div>
-          <div class="row m-t-10">
-            <div class="col-lg-6">
-              <p><small>I agree to the <a href="#" class="text-info">Pages Terms</a> and <a href="#" class="text-info">Privacy</a>.</small></p>
-            </div>
-            <div class="col-lg-6 text-right">
-              <a href="#" class="text-info small">Help? Contact Support</a>
-            </div>
-          </div>
-          <button class="btn btn-primary btn-cons m-t-10" type="submit">Create a new account</button>
+          <button class="btn btn-primary btn-cons m-t-10" type="submit">회원가입</button>
         </form>
       </div>
     </div>
