내 정보 레이아웃 구현중..

--- a/api/templates/join.html
+++ b/api/templates/join.html
@@ -22,41 +22,36 @@
         <!-- <p>
           Create a pages account. If you have a facebook account, log into it for this process. Sign in with <a href="#" class="text-info">Facebook</a> or <a href="#" class="text-info">Google</a>
         </p> -->
-        <form id="form-register" class="p-t-15" role="form" action="index.html">
+        <form id="form-register" class="p-t-15" role="form" action="{% url 'join' %}" method="post">
+        {% csrf_token %}
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
               <div class="form-group form-group-default">
-                <label>First Name</label>
-                <input type="text" name="fname" placeholder="John" class="form-control" required>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group form-group-default">
-                <label>Last Names</label>
-                <input type="text" name="lname" placeholder="Smith" class="form-control" required>
+                <label>이름</label>
+                <input type="text" name="name" placeholder="John" class="form-control" required>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
               <div class="form-group form-group-default">
-                <label>Pages User name</label>
-                <input type="text" name="uname" placeholder="yourname.pages.com (this can be changed later)" class="form-control" required>
+                <label>닉네임</label>
+                <input type="text" name="nick" placeholder="yourname.pages.com (this can be changed later)" class="form-control" required>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
               <div class="form-group form-group-default">
-                <label>Password</label>
-                <input type="password" name="pass" placeholder="Minimum of 4 Charactors" class="form-control" required>
+                <label>비밀번호</label>
+                <input type="password" name="password" placeholder="Minimum of 4 Charactors" class="form-control" required>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
               <div class="form-group form-group-default">
-                <label>Email</label>
+                <label>이메일</label>
                 <input type="email" name="email" placeholder="We will send loging details to you" class="form-control" required>
               </div>
             </div>
