--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -45,7 +45,7 @@
       <!-- END SIDEBAR MENU TOP TRAY CONTENT-->
       <!-- BEGIN SIDEBAR MENU HEADER-->
       <div class="sidebar-header">
-        <img src="{% static 'assets/img/logo.png' %}" alt="logo" class="brand" data-src="{% static 'assets/img/logo.png' %}" data-src-retina="{% static 'assets/img/logo_2x.png' %}" width="78" height="22">
+        <a href="{% url 'index' %}"><img src="{% static 'assets/img/logo.png' %}" alt="logo" class="brand" data-src="{% static 'assets/img/logo.png' %}" data-src-retina="{% static 'assets/img/logo_2x.png' %}" width="78" height="22"></a>
       </div>
       <!-- END SIDEBAR MENU HEADER-->
       <!-- START SIDEBAR MENU -->
@@ -53,15 +53,15 @@
         <!-- BEGIN SIDEBAR MENU ITEMS-->
         <ul class="menu-items">
           <li class="m-t-30 ">
-            <a href="/" class="detailed">
-              <span class="title">HOME</span>
-              <span class="details">index.html</span>
+            <a href="/api/v1/ad/" class="detailed">
+              <span class="title">크리에이터</span>
+              <span class="details">ad_list.html</span>
             </a>
             <span class="icon-thumbnail"><i data-feather="shield"></i></span>
           </li>
           <li class="m-t-30 ">
             <a href="/api/v1/ad/" class="detailed">
-              <span class="title">광고</span>
+              <span class="title">광고주</span>
               <span class="details">ad_list.html</span>
             </a>
             <span class="icon-thumbnail"><i data-feather="shield"></i></span>
@@ -294,7 +294,7 @@
     <!-- START PAGE-CONTAINER -->
     <div class="page-container ">
       <!-- START HEADER -->
-      <div class="header ">
+      <div class="header light">
         <!-- START MOBILE SIDEBAR TOGGLE -->
         <a href="#" class="btn-link toggle-sidebar hidden-lg-up pg pg-menu" data-toggle="sidebar">
         </a>
@@ -319,95 +319,6 @@
                   <div class="notification-panel">
                     <!-- START Notification Body-->
                     <div class="notification-body scrollable">
-                      <!-- START Notification Item-->
-                      <div class="notification-item unread clearfix">
-                        <!-- START Notification Item-->
-                        <div class="heading open">
-                          <a href="#" class="text-primary pull-left">
-                            <i class="pg-map fs-16 m-r-10"></i>
-                            <span class="bold">Carrot Design</span>
-                            <span class="fs-12 m-l-10">David Nester</span>
-                          </a>
-                          <div class="pull-right">
-                            <div class="thumbnail-wrapper d16 circular inline m-t-15 m-r-10 toggle-more-details">
-                              <div><i class="fa fa-angle-left"></i>
-                              </div>
-                            </div>
-                            <span class=" time">few sec ago</span>
-                          </div>
-                          <div class="more-details">
-                            <div class="more-details-inner">
-                              <h5 class="semi-bold fs-16">“Apple’s Motivation - Innovation <br>
-                                                            distinguishes between <br>
-                                                            A leader and a follower.”</h5>
-                              <p class="small hint-text">
-                                Commented on john Smiths wall.
-                                <br> via pages framework.
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                        <!-- END Notification Item-->
-                        <!-- START Notification Item Right Side-->
-                        <div class="option" data-toggle="tooltip" data-placement="left" title="mark as read">
-                          <a href="#" class="mark"></a>
-                        </div>
-                        <!-- END Notification Item Right Side-->
-                      </div>
-                      <!-- START Notification Body-->
-                      <!-- START Notification Item-->
-                      <div class="notification-item  clearfix">
-                        <div class="heading">
-                          <a href="#" class="text-danger pull-left">
-                            <i class="fa fa-exclamation-triangle m-r-10"></i>
-                            <span class="bold">98% Server Load</span>
-                            <span class="fs-12 m-l-10">Take Action</span>
-                          </a>
-                          <span class="pull-right time">2 mins ago</span>
-                        </div>
-                        <!-- START Notification Item Right Side-->
-                        <div class="option">
-                          <a href="#" class="mark"></a>
-                        </div>
-                        <!-- END Notification Item Right Side-->
-                      </div>
-                      <!-- END Notification Item-->
-                      <!-- START Notification Item-->
-                      <div class="notification-item  clearfix">
-                        <div class="heading">
-                          <a href="#" class="text-warning-dark pull-left">
-                            <i class="fa fa-exclamation-triangle m-r-10"></i>
-                            <span class="bold">Warning Notification</span>
-                            <span class="fs-12 m-l-10">Buy Now</span>
-                          </a>
-                          <span class="pull-right time">yesterday</span>
-                        </div>
-                        <!-- START Notification Item Right Side-->
-                        <div class="option">
-                          <a href="#" class="mark"></a>
-                        </div>
-                        <!-- END Notification Item Right Side-->
-                      </div>
-                      <!-- END Notification Item-->
-                      <!-- START Notification Item-->
-                      <div class="notification-item unread clearfix">
-                        <div class="heading">
-                          <div class="thumbnail-wrapper d24 circular b-white m-r-5 b-a b-white m-t-10 m-r-10">
-                            <img width="30" height="30" data-src-retina="{% static 'assets/img/profiles/1x.jpg' %}" data-src="{% static 'assets/img/profiles/1.jpg' %}" alt="" src="{% static 'assets/img/profiles/1.jpg' %}">
-                          </div>
-                          <a href="#" class="text-primary pull-left">
-                            <span class="bold">Revox Design Labs</span>
-                            <span class="fs-12 m-l-10">Owners</span>
-                          </a>
-                          <span class="pull-right time">11:00pm</span>
-                        </div>
-                        <!-- START Notification Item Right Side-->
-                        <div class="option" data-toggle="tooltip" data-placement="left" title="mark as read">
-                          <a href="#" class="mark"></a>
-                        </div>
-                        <!-- END Notification Item Right Side-->
-                      </div>
-                      <!-- END Notification Item-->
                     </div>
                     <!-- END Notification Body-->
                     <!-- START Notification Footer-->
@@ -429,7 +340,7 @@
           <!-- 오른쪽 메뉴 끝 .. -->
           <!-- 오른쪽 프로필 .. -->
           <div class="pull-left p-r-10 fs-14 font-heading hidden-md-down m-l-20">
-            <span class="semi-bold">David</span> <span class="text-master">Nest</span>
+            <span class="semi-bold">{{ user.email}}</span> 
           </div>
           <div class="dropdown pull-right hidden-md-down">
             <button class="profile-dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -438,14 +349,13 @@
               </span>
             </button>
             <div class="dropdown-menu dropdown-menu-right profile-dropdown" role="menu">
-              <a href="#" class="dropdown-item"><i class="pg-settings_small"></i> Settings</a>
-              <a href="#" class="dropdown-item"><i class="pg-signals"></i> Help</a>
+              <a href="{% url 'my' %}" class="dropdown-item"><i class="pg-settings_small"></i> 내 정보</a>
+              <a href="#" class="dropdown-item"><i class="pg-signals"></i> 고객센터</a>
               <a href="{% url 'logout' %}" class="dropdown-item"><i class="pg-power"></i> Logout</a>
             </div>
           </div>
           
           <!-- END User Info-->
-          <a href="#" class="header-icon pg pg-alt_menu btn-link m-l-10 sm-no-margin d-inline-block" data-toggle="quickview" data-toggle-element="#quickview"></a>
           {% else %}
           <a href="{% url 'login' %}">LOGIN</a> 
           <a href="{% url 'join' %}">JOIN</a>
@@ -454,7 +364,7 @@
       </div>
       <!-- END HEADER -->
       <!-- START PAGE CONTENT WRAPPER -->
-      <div class="page-content-wrapper ">
+      <div class="page-content-wrapper">
 
           <!-- !!!!!! START BLOCK CONTENT !!!!!! -->
 
@@ -465,7 +375,7 @@
 
         <!-- START COPYRIGHT -->
         <!-- START CONTAINER FLUID -->
-        <div class=" container-fluid  container-fixed-lg footer">
+        <div class="container-fluid  container-fixed-lg footer">
           <div class="copyright sm-text-center">
             <p class="small no-margin pull-left sm-pull-reset">
               <span class="hint-text">Copyright &copy; 2017 </span>
