내정보 아이콘 변경
Signed-off-by: KangSeyun <dcp.k953@gmail.com>

--- a/api/templates/my/my_base.html
+++ b/api/templates/my/my_base.html
@@ -12,7 +12,7 @@
             <ul class="main-menu">
               <li class="">
                 <a href="{% url 'my' %}">
-                  <span class="title"><i class="pg-inbox"></i> 내 정보</span>
+                  <span class="title"><i class="fa fa-address-card-o"></i> 내 정보</span>
                   <span class="badge pull-right">5</span>
                 </a>
               </li>
@@ -28,12 +28,12 @@
             <ul class="main-menu">
               <li class="">
                 <a href="{% url 'ad_write' %}">
-                  <span class="title"><i class="pg-inbox"></i> 광고 작성</span>
+                  <span class="title"><i class="fa fa-pencil"></i> 광고 작성</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <span class="title"><i class="pg-sent"></i> 광고 현황</span>
+                  <span class="title"><i class="fa fa-list"></i> 광고 현황</span>
                   <span class="badge pull-right">1</span>
                 </a>
               </li>
@@ -43,13 +43,13 @@
             <ul class="main-menu">
               <li class="">
                 <a href="{% url 'notification' %}">
-                  <span class="title"><i class="pg-inbox"></i> 알림</span>
+                  <span class="title"><i class="fa fa-bell-o"></i> 알림</span>
                   <span class="badge pull-right">5</span>
                 </a>
               </li>
               <li class="active">
                 <a href="{% url 'chat' %}">
-                  <span class="title"><i class="pg-folder"></i> 메시지 </span>
+                  <span class="title"><i class="fa fa-commenting"></i> 메시지 </span>
                   <span class="badge pull-right">2</span>
                 </a>
               </li>
