상단 회원가입 지우고 로그인 버튼 디자인 변경
Signed-off-by: KangSeyun <dcp.k953@gmail.com>

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -353,8 +353,9 @@
           
           <!-- END User Info-->
           {% else %}
-          <a href="{% url 'login' %}">LOGIN</a> 
-          <a href="{% url 'join' %}">JOIN</a>
+          <a href="{% url 'login' %}">     
+            <button class="btn btn-primary btn-cons m-t-10" type="submit">로그인</button><br/>
+          </a> 
           {% endif %}
         </div>
       </div>
