--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -37,8 +37,10 @@
               </div>
             </div>
           </div>
-          <button class="btn btn-primary btn-cons m-t-10" type="submit">Login</button><br/>
-
+          
+            <button class="btn btn-primary btn-cons m-t-10" type="submit">로그인</button><br/>
+            <label style="margin-top:23px;">아직 회원이 아니십니까? <a href="{% url 'join' %}">회원가입</a></label>
+       
           <div class="col-lg-6" style="float: right;">
             <button class="btn btn-block btn-info" type="button">
                         <span class="pull-left"><i class="fa fa-facebook"></i></span>
