Left menu Icon Margin 조정, 및 문구 수정
Signed-off-by: KangSeyun <dcp.k953@gmail.com>

--- a/api/static/pages/css/themes/light.css
+++ b/api/static/pages/css/themes/light.css
@@ -13691,6 +13691,7 @@ Main components
     -webkit-transform: translate3d(-14px, 0, 0);
     transform: translate3d(-14px, 0, 0);
     -ms-transform: translate(-14px, 0);
+    margin-top: 11px;
   }
   body.menu-behind .page-sidebar {
     z-index: 799;
