--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -55,12 +55,16 @@
           <li class="m-t-30 ">
             <a href="/api/v1/ad/" class="detailed">
               <span class="title">크리에이터</span>
+              <span class="details">나에가 딱맞는 광고를 </span>
             </a>
+            <span class="icon-thumbnail"><i data-feather="shield"></i></span>
           </li>
           <li class="m-t-30 ">
             <a href="/api/v1/ad/" class="detailed">
-              <span class="title">광고주</span>
+              <span class="title">광고</span>
+              <span class="details">나에 재능을, 능력을</span>
             </a>
+            <span class="icon-thumbnail"><i class="fa fa-adjust"></i></span>
           </li>
           </ul>
           </li>
