--- a/api/templates/join.html
+++ b/api/templates/join.html
@@ -57,9 +57,20 @@
             </div>
           </div>
           <button class="btn btn-primary btn-cons m-t-10" type="submit">회원가입</button>
+          <div class="row" style="float: right;">
+           <div>
+            <button class="btn btn-block btn-info" type="button">
+                        <span class="bold">페이스북으로 회원가입</span>
+            </button>
+            <button class="btn btn-block btn-danger" type="button">
+                        <span class="bold">구글로 회원가입</span>
+            </button>
+          </div>
+          </div>
         </form>
       </div>
     </div>
+    
 
     <script src="{% static 'pages/js/pages.min.js' %}"></script>
     <script>
